[workspace]
members = [
    "bb8-nebula-graph",
    "demos/async-std",
    "demos/tokio",
    "mobc-nebula-graph",
    "nebula-fbthrift-common",
    "nebula-fbthrift-common-v2",
    "nebula-fbthrift-graph",
    "nebula-fbthrift-graph-v2",
    "nebula-fbthrift-meta",
    "nebula-fbthrift-meta-v2",
    "nebula-fbthrift-raftex",
    "nebula-fbthrift-raftex-v2",
    "nebula-fbthrift-storage",
    "nebula-fbthrift-storage-v2",
    "nebula-graph-client",
]
