[workspace]
members = [
    # 
    "bb8-nebula",
    # 
    "demos/tokio",
    # 
    "mobc-nebula",
    # 
    "nebula-client",
    # 
    "nebula-fbthrift/*",
    # 
    "serde-nebula-fbthrift-graph",
]

[patch.crates-io]
fbthrift-transport = { git = "https://github.com/bk-rs/fbthrift-transport", branch = "fbthrift-git-0-0-7" }
fbthrift-transport-response-handler = { git = "https://github.com/bk-rs/fbthrift-transport", branch = "fbthrift-git-0-0-7" }
