[package]
name = "bb8-nebula"
version = "0.5.2"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2018"
description = "bb8 Nebula Graph/Meta/Storage pool"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/nebula-rs"
homepage = "https://github.com/bk-rs/nebula-rs"
documentation = "https://docs.rs/bb8-nebula"
keywords = []
categories = []
readme = "README.md"

[features]
default = ["graph"]
graph = ["nebula-client/graph"]

[dependencies]
fbthrift-transport = { version = "=0.4.3", default-features = false, features = ["tokio_io"] }

bb8 = { version = "~0.5", default-features = false, features = [] }
async-trait = { version = "0.1", default-features = false, features = [] }
tokio = { version = "~0.2", default-features = false, features = ["net"] }

nebula-client = { path = "../nebula-client", version = "0.4", default-features = false, features = [], optional = true }
