[package]
name = "bb8-nebula"
version = "0.6.1"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2018"
description = "bb8 Nebula Graph/Meta/Storage pool"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/nebula-rs"
homepage = "https://github.com/bk-rs/nebula-rs"
documentation = "https://docs.rs/bb8-nebula"
keywords = []
categories = []
readme = "README.md"

[features]
default = ["graph", "tokio1"]
graph = ["nebula-client/graph"]

tokio02 = ["fbthrift-transport/tokio02_io", "bb805", "tokio02_"]
tokio1 = ["fbthrift-transport/tokio_io", "bb8", "tokio"]

[dependencies]
fbthrift-transport = { version = "=0.7.0", default-features = false, features = [] }

bb805 = { version = "~0.5", default-features = false, features = [], package = "bb8", optional = true }
bb8 = { version = "0.7", default-features = false, features = [], optional = true }

async-trait = { version = "0.1", default-features = false, features = [] }

tokio02_ = { version = "~0.2", default-features = false, features = ["net"], optional = true, package = "tokio" }
tokio = { version = "1.0", default-features = false, features = ["net"], optional = true }

nebula-client = { path = "../nebula-client", version = "=0.5.0", default-features = false, features = [], optional = true }

[package.metadata.cargo-all-features]
skip_feature_sets = [
    ["tokio02", "tokio1"]
]
skip_optional_dependencies = true
