[package]
name = "mobc-nebula"
version = "0.4.3"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2018"
description = "mobc Nebula Graph/Meta/Storage pool"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/nebula-rs"
homepage = "https://github.com/bk-rs/nebula-rs"
documentation = "https://docs.rs/mobc-nebula"
keywords = []
categories = []
readme = "README.md"

[features]
default = ["graph"]
graph = ["nebula-graph-client"]
async_std = ["async-std", "mobc/async-std", "fbthrift-transport/futures_io"]
tokio = ["tokio02", "mobc/tokio", "fbthrift-transport/tokio_io"]

[dependencies]
fbthrift-transport = { version = "0.4", default-features = false, features = [] }

cfg-if = { version = "0.1", default-features = false, features = [] }

mobc = { version = "0.5", default-features = false, features = ["async-std", "unstable"], optional = true }

nebula-graph-client = { path = "../nebula-graph-client", version = "0.3", default-features = false, features = [], optional = true }

tokio02 = { package = "tokio", version = "0.2", default-features = false, features = ["net"], optional = true }
async-std = { version = "1.6", default-features = false, features = ["default"], optional = true }
