[package]
name = "mobc-nebula"
version = "0.5.3"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2018"
description = "mobc Nebula Graph/Meta/Storage pool"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/nebula-rs"
homepage = "https://github.com/bk-rs/nebula-rs"
documentation = "https://docs.rs/mobc-nebula"
keywords = []
categories = []
readme = "README.md"

[features]
default = ["graph"]
graph = ["nebula-client/graph"]
async_std = ["async-std", "mobc/async-std", "fbthrift-transport/futures_io"]
tokio = ["tokio02", "mobc/tokio", "fbthrift-transport/tokio02_io"]

[dependencies]
fbthrift-transport = { version = "0.5.0", default-features = false, features = [] }

cfg-if = { version = "1.0", default-features = false, features = [] }

mobc = { version = "0.6", default-features = false, features = ["async-std", "unstable"], optional = true }

nebula-client = { path = "../nebula-client", version = "0.4", default-features = false, features = [], optional = true }

tokio02 = { package = "tokio", version = "~0.2", default-features = false, features = ["net"], optional = true }
async-std = { version = "1.8", default-features = false, features = ["default"], optional = true }

[package.metadata.cargo-all-features]
skip_feature_sets = [
    ["async_std", "tokio"],
]
skip_optional_dependencies = true
