[package]
name = "mobc-nebula"
version = "0.6.2"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2018"
description = "mobc Nebula Graph/Meta/Storage pool"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/nebula-rs"
homepage = "https://github.com/bk-rs/nebula-rs"
documentation = "https://docs.rs/mobc-nebula"
keywords = []
categories = []
readme = "README.md"

[features]
default = ["graph"]
graph = ["nebula-client/graph"]

[dependencies]
fbthrift-transport = { version = "=0.7.0", default-features = false, features = ["futures_io"] }

mobc = { version = "0.7", default-features = false, features = ["async-std", "unstable"] }
async-std = { version = "1.9", default-features = false, features = ["default"] }

nebula-client = { path = "../nebula-client", version = "0.4", default-features = false, features = [] }

[package.metadata.cargo-all-features]
skip_feature_sets = []
skip_optional_dependencies = true
