[package]
name = "nebula-client"
version = "0.4.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2018"
description = "Nebula Graph/Meta/Storage client"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/nebula-rs"
homepage = "https://github.com/bk-rs/nebula-rs"
documentation = "https://docs.rs/nebula-client"
keywords = []
categories = []
readme = "README.md"

[features]
default = ["graph"]
graph = ["nebula-fbthrift-graph", "nebula-fbthrift-graph-v2", "serde", "serde-nebula-fbthrift-graph"]
meta = ["nebula-fbthrift-meta"]
storage = ["nebula-fbthrift-storage"]

[dependencies]
fbthrift = { package = "fbthrift-git", version = "0.0.3", default-features = false, features = [] }

bytes = { version = "0.5", default-features = false, features = [] }
async-trait = { version = "0.1", default-features = false, features = [] }
cfg-if = { version = "0.1", default-features = false, features = [] }

fbthrift-transport-response-handler = { version = "0.4" }

nebula-fbthrift-graph = { path = "../nebula-fbthrift/nebula-fbthrift-graph", version = "0.1", default-features = false, features = [], optional = true }
nebula-fbthrift-graph-v2 = { path = "../nebula-fbthrift/nebula-fbthrift-graph-v2", version = "0.1", default-features = false, features = [], optional = true }

nebula-fbthrift-meta = { path = "../nebula-fbthrift/nebula-fbthrift-meta", version = "0.1", default-features = false, features = [], optional = true }

nebula-fbthrift-storage = { path = "../nebula-fbthrift/nebula-fbthrift-storage", version = "0.1", default-features = false, features = [], optional = true }

serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }
serde-nebula-fbthrift-graph = { path = "../serde-nebula-fbthrift-graph", version = "0.1", default-features = false, features = ["chrono"], optional = true }
