[package]
name = "nebula-client"
version = "0.6.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "Nebula Graph/Meta/Storage client"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/nebula-rs"
homepage = "https://github.com/bk-rs/nebula-rs"
documentation = "https://docs.rs/nebula-client"
keywords = []
categories = []
readme = "README.md"

[package.metadata.docs.rs]
features = [ "graph", "meta", "storage" ]

[features]
default = ["graph"]
graph = ["nebula-fbthrift-graph-v1", "nebula-fbthrift-graph-v2", "serde", "serde-nebula-fbthrift-graph"]
meta = ["nebula-fbthrift-meta-v1"]
storage = ["nebula-fbthrift-storage-v1"]

[dependencies]
fbthrift = { package = "fbthrift-git", version = "=0.0.6", default-features = false }

bytes = { version = "0.5", default-features = false }
async-trait = { version = "0.1", default-features = false }

fbthrift-transport-response-handler = { version = "0.6" }

nebula-fbthrift-graph-v1 = { version = "=0.2.0", default-features = false, optional = true, path = "../nebula-fbthrift/nebula-fbthrift-graph-v1" }
nebula-fbthrift-graph-v2 = { version = "=0.2.0", default-features = false, optional = true, path = "../nebula-fbthrift/nebula-fbthrift-graph-v2" }

nebula-fbthrift-meta-v1 = { version = "=0.2.0", default-features = false, optional = true, path = "../nebula-fbthrift/nebula-fbthrift-meta-v1" }

nebula-fbthrift-storage-v1 = { version = "=0.2.0", default-features = false, optional = true, path = "../nebula-fbthrift/nebula-fbthrift-storage-v1" }

serde = { version = "1", default-features = false, features = ["derive"], optional = true }
serde-nebula-fbthrift-graph = { default-features = false, features = ["chrono"], optional = true, path = "../serde-nebula-fbthrift-graph", version = "=0.2.0" }

[package.metadata.cargo-all-features]
skip_optional_dependencies = true
