[package]
name = "nebula-fbthrift-common"
version = "0.1.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2018"
description = "Nebula Graph common interface"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/nebula-rs"
homepage = "https://github.com/bk-rs/nebula-rs"
documentation = "https://docs.rs/nebula-fbthrift-common"
keywords = []
categories = []
readme = "README.md"

[dependencies]
fbthrift = { package = "fbthrift-git", version = "0.0.1+unstable2020090200", default-features = false, features = [] }

anyhow = { version = "1.0", default-features = false, features = [] }
lazy_static = { version = "1.4", default-features = false, features = [] }
