[package]
name = "nebula-graph-client"
version = "0.3.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2018"
description = "Nebula Graph client"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/nebula-rs"
homepage = "https://github.com/bk-rs/nebula-rs"
documentation = "https://docs.rs/nebula-graph-client"
keywords = []
categories = []
readme = "README.md"

[features]
default = ["serde_feature"]
serde_feature = ["serde", "serde-nebula-fbthrift-graph"]

[dependencies]
fbthrift = { package = "fbthrift-git", version = "0.0.1+unstable2020090200", default-features = false, features = [] }
nebula-fbthrift-graph = { path = "../nebula-fbthrift-graph", version = "0.1", default-features = false, features = [] }
nebula-fbthrift-graph-v2 = { path = "../nebula-fbthrift-graph-v2", version = "0.1", default-features = false, features = [] }

bytes = { version = "0.5", default-features = false, features = [] }
async-trait = { version = "0.1", default-features = false, features = [] }
cfg-if = { version = "0.1", default-features = false, features = [] }

fbthrift-transport-response-handler = { version = "0.3" }

serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }
serde-nebula-fbthrift-graph = { path = "../serde-nebula-fbthrift-graph", version = "0.1", default-features = false, features = ["chrono"], optional = true }
