[package]
name = "nebula-graph-fbthrift-common-v2"
version = "0.1.1"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2018"
description = "Nebula Graph v2 common interface"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/nebula-graph-rs"
homepage = "https://github.com/bk-rs/nebula-graph-rs"
documentation = "https://docs.rs/nebula-graph-fbthrift-common-v2"
keywords = []
categories = []
readme = "README.md"

[dependencies]
fbthrift = { package = "fbthrift-git", version = "0.0.1+unstable2020090200", default-features = false, features = [] }

anyhow = { version = "1.0", default-features = false, features = [] }
