[package]
name = "serde-nebula-fbthrift-graph"
version = "0.1.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = [], optional = true }

nebula-fbthrift-graph = { path = "../nebula-fbthrift-graph", version = "0.1", default-features = false, features = [] }

[dev-dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde_repr = "0.1"
