[package]
name = "serde-nebula-fbthrift-graph"
version = "0.1.2"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2018"
description = "nebula-fbthrift-graph serde deserializer"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/nebula-rs"
homepage = "https://github.com/bk-rs/nebula-rs"
documentation = "https://docs.rs/serde-nebula-fbthrift-graph"
keywords = []
categories = []
readme = "README.md"

[features]
default = ["chrono"]

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = [], optional = true }

nebula-fbthrift-graph = { path = "../nebula-fbthrift/nebula-fbthrift-graph", version = "0.1", default-features = false, features = [] }

[dev-dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde_repr = "0.1"
