[package]
name = "nebula-graph-demo-async-std"
version = "0.1.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2018"

[[bin]]
name = "graph_client"
path = "src/graph_client.rs"

[[bin]]
name = "v2_graph_client"
path = "src/v2_graph_client.rs"

[dependencies]
nebula-graph-client = { path = "../../nebula-graph-client", version = "0.1" }

fbthrift-transport = { version = "0.1", features = ["futures_io"] }

async-std = { version = "1.6", default-features = false, features = ["default", "attributes"] }
