[package]
name = "nebula-graph-demo-async-std"
version = "0.1.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2018"

[[bin]]
name = "graph_client"
path = "src/graph_client.rs"

[[bin]]
name = "mobc_graph_pool"
path = "src/mobc_graph_pool.rs"

[[bin]]
name = "v2_graph_client"
path = "src/v2_graph_client.rs"

[[bin]]
name = "v2_mobc_graph_pool"
path = "src/v2_mobc_graph_pool.rs"

[dependencies]
# non-pool
nebula-graph-client = { path = "../../nebula-graph-client", version = "0.1" }
fbthrift-transport = { version = "0.1", features = ["futures_io"] }

# mobc
mobc = "0.5"
mobc-nebula-graph = { path = "../../mobc-nebula-graph", version = "0.1", features = ["async_std"] }

# common
async-std = { version = "1.6", default-features = false, features = ["default", "attributes"] }
serde-nebula-fbthrift-graph = { path = "../../serde-nebula-fbthrift-graph", version = "0.1", features = ["chrono"] }
serde = { version = "1.0", features = ["derive"] }
