[package]
name = "nebula-demo-async-std"
version = "0.1.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2018"

[[bin]]
name = "count_edge"
path = "src/count_edge.rs"

[[bin]]
name = "count_vertex"
path = "src/count_vertex.rs"

[[bin]]
name = "graph_client"
path = "src/graph_client.rs"

[[bin]]
name = "graph_crud"
path = "src/graph_crud.rs"

[[bin]]
name = "mobc_graph_pool"
path = "src/mobc_graph_pool.rs"

[[bin]]
name = "v2_graph_client"
path = "src/v2_graph_client.rs"

[[bin]]
name = "v2_mobc_graph_pool"
path = "src/v2_mobc_graph_pool.rs"

[dependencies]
# non-pool
nebula-client = { path = "../../nebula-client", version = "0.4", features = ["graph", "meta", "storage"] }
fbthrift-transport = { version = "0.6", features = ["futures_io"] }

# mobc
mobc = "0.6"
mobc-nebula = { path = "../../mobc-nebula", version = "0.6", features = ["graph"] }

# common
async-std = { version = "1.8", default-features = false, features = ["default", "attributes"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }

nebula-fbthrift-meta = { path = "../../nebula-fbthrift/nebula-fbthrift-meta", version = "0.1" }

nebula-fbthrift-storage = { path = "../../nebula-fbthrift/nebula-fbthrift-storage", version = "0.1" }
