[package]
name = "nebula-demo-tokio"
version = "0.1.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2018"

[[bin]]
name = "bb8_graph_pool"
path = "src/bb8_graph_pool.rs"

[[bin]]
name = "graph_client"
path = "src/graph_client.rs"

[[bin]]
name = "v2_bb8_graph_pool"
path = "src/v2_bb8_graph_pool.rs"

[[bin]]
name = "v2_graph_client"
path = "src/v2_graph_client.rs"

[dependencies]
# non-pool
nebula-client = { path = "../../nebula-client", version = "0.4", features = ["graph"] }
fbthrift-transport = { version = "0.6", features = ["tokio02_io"] }

# bb8
bb8 = "~0.5"
bb8-nebula = { path = "../../bb8-nebula", version = "0.6", default-features = false, features = ["graph", "tokio02"] }

# common
tokio = { version = "~0.2", default-features = false, features = ["io-util", "net", "macros"] }
