[package]
name = "nebula-demo-tokio"
version = "0.1.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"

[[bin]]
name = "nebula_demo_tokio_v1_bb8_graph_pool"
path = "src/v1_bb8_graph_pool.rs"

[[bin]]
name = "nebula_demo_tokio_v1_graph_client"
path = "src/v1_graph_client.rs"

[[bin]]
name = "nebula_demo_tokio_v2_bb8_graph_pool"
path = "src/v2_bb8_graph_pool.rs"

[[bin]]
name = "nebula_demo_tokio_v2_graph_client"
path = "src/v2_graph_client.rs"

[dependencies]
# non-pool
fbthrift-transport = { version = "=0.7.0", features = ["impl_tokio"] }
nebula-client = { version = "=0.5.0", features = ["graph"], path = "../../nebula-client" }

# bb8
bb8 = { version = "0.8" }
bb8-nebula = { version = "=0.7.0", features = ["graph"], path = "../../bb8-nebula" }

# common
tokio = { version = "1", features = ["macros", "rt-multi-thread" ] }
