[package]
name = "nebula-fbthrift-common-v1"
version = "0.2.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2018"
description = "Nebula Graph v1 common interface"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/nebula-rs"
homepage = "https://github.com/bk-rs/nebula-rs"
documentation = "https://docs.rs/nebula-fbthrift-common"
keywords = []
categories = []
readme = "README.md"

[dependencies]
fbthrift = { package = "fbthrift-git", version = "=0.0.6", default-features = false }

anyhow = { version = "1", default-features = false }
lazy_static = { version = "1", default-features = false }
