[package]
name = "nebula-fbthrift-common-v2"
version = "0.2.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2018"
description = "Nebula Graph v2 common interface"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/nebula-rs"
homepage = "https://github.com/bk-rs/nebula-rs"
documentation = "https://docs.rs/nebula-fbthrift-common-v2"
keywords = []
categories = []
readme = "README.md"

[dependencies]
fbthrift = { package = "fbthrift-git", version = "=0.0.6", default-features = false, features = [] }

anyhow = { version = "1.0", default-features = false, features = [] }

[dev-dependencies]
float-cmp = "0.8"
