[package]
name = "nebula-fbthrift-raftex"
version = "0.2.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2018"
description = "Nebula Graph raftex interface"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/nebula-rs"
homepage = "https://github.com/bk-rs/nebula-rs"
documentation = "https://docs.rs/nebula-fbthrift-raftex"
keywords = []
categories = []
readme = "README.md"

[dependencies]
fbthrift = { package = "fbthrift-git", version = "=0.0.6", default-features = false }

anyhow = { version = "1", default-features = false }
futures = { version = "0.3", default-features = false, features = ["std"] }
async-trait = { version = "0.1", default-features = false }
const-cstr = { version = "0.3" }

common = { package = "nebula-fbthrift-common", version = "=0.2.0", default-features = false, path = "../nebula-fbthrift-common" }
