[package]
name = "nebula-fbthrift-storage-v3"
version = "0.0.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "Nebula Graph v3 storage interface"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/nebula-rs"
homepage = "https://github.com/bk-rs/nebula-rs"
documentation = "https://docs.rs/nebula-fbthrift-storage-v3"
keywords = []
categories = []
readme = "README.md"

[dependencies]
